--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-diffusers
-omegaconf
-torchvision
-Pillow
+torch==2.0.1
+torchvision==0.15.2
+xformers==0.0.22
+diffusers==0.21.4
+omegaconf==2.3.0
+pillow==9.5.0
